<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.matsim.vsp</groupId>
    <artifactId>nemo</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <scm>
        <url>https://github.com/matsim-vsp/mercator-nemo.</url>
        <connection>scm:git:git://github.com/matsim-vsp/mercator-nemo.git</connection>
        <developerConnection>scm:git:git@github.com:matsim-vsp/mercator-nemo.git</developerConnection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <matsim.version>12.0-2019w52-SNAPSHOT</matsim.version>
    </properties>

    <repositories>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <!-- MATSim is not on Maven central -->
            <id>matsim</id>
            <url>https://dl.bintray.com/matsim/matsim</url>
        </repository>

        <repository>
            <!-- Geotools is not on Maven central -->
            <id>osgeo</id>
            <name>Geotools repository</name>
            <url>http://download.osgeo.org/webdav/geotools</url>
        </repository>

        <repository>
            <!-- Required for MATSim snaphots -->
            <id>ojo-snapshots</id>
            <url>http://oss.jfrog.org/libs-snapshot</url>
        </repository>
        <repository>
            <id>matsim-vsp-vsp-playgrounds</id>
            <url>https://packagecloud.io/matsim-vsp/vsp-playgrounds/maven2</url>
            <!--<releases>-->
            <!--<enabled>true</enabled>-->
            <!--</releases>-->
            <!--<snapshots>-->
            <!--<enabled>true</enabled>-->
            <!--</snapshots>-->
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <!-- Include some MATSim extensions -->
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>otfvis</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>cadytsIntegration</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>bicycle</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>drt</artifactId>
            <version>${matsim.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>av</artifactId>
            <version>${matsim.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>dvrp</artifactId>
            <version>${matsim.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>vsp</artifactId>
            <version>12.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.matsim</groupId>
            <artifactId>matsim-examples</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <version>${matsim.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>4.1.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>4.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.7</version>
        </dependency>

        <!-- Include the JUnit testing library -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.github.matsim-org</groupId>
            <artifactId>GTFS2MATSim</artifactId>
            <version>11.1</version>
        </dependency>
        <dependency>
            <groupId>com.beust</groupId>
            <artifactId>jcommander</artifactId>
            <version>1.72</version>
        </dependency>
        <dependency>
            <groupId>com.github.Janekdererste</groupId>
            <artifactId>super-sonic-osm-network-reader</artifactId>
            <version>0.1.4</version>
        </dependency>


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.19.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.0</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <revisionOnScmFailure>unknown</revisionOnScmFailure>
                    <timestampFormat>{0,date,yyyy-MM-dd HH:mm:ss}</timestampFormat>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <defaultGoal>assembly:assembly</defaultGoal>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-assembly-plugin</artifactId>
                            <configuration>
                                <descriptors>
                                    <descriptor>src/main/assembly/assembly-release.xml</descriptor>
                                </descriptors>
                            </configuration>
                        </plugin>
                        <plugin>
                            <artifactId>maven-jar-plugin</artifactId>
                            <configuration>
                                <archive>
                                    <manifest>
                                        <addClasspath>true</addClasspath>
                                        <classpathPrefix>libs/</classpathPrefix>
                                    </manifest>
                                </archive>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>

</project>